[project]
name = "milestone-3-yvitamn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "bcrypt>=4.3.0",
    "flask>=3.1.0",
    "marshmallow>=3.26.1",
    "pytest>=8.3.5",
    "requests>=2.32.3",
    "watchdog>=6.0.0",
]
