[project]
name = "milestone-3-yvitamn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
    "bcrypt>=4.3.0",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-debugtoolbar>=0.16.0",
    "marshmallow>=3.26.1",
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "pytest-timeout>=2.3.1",
    "python-dotenv>=1.0.1",
    "redis>=5.2.1",
    "requests>=2.32.3",
    "taskipy>=1.14.1",
    "watchdog>=6.0.0",
]

[tool.taskipy.tasks]
fr = "flask --app run run --port 5000 --reload --debug"
